cppcheck_log.txt
mit_election.h:147:15: error: Buffer is accessed out of bounds: sprn [bufferAccessOutOfBounds]
        fgets(sprn,99,fp);
              ^
mit_election.h:218:10: error: Buffer is accessed out of bounds: str [bufferAccessOutOfBounds]
   fgets(str,99,fp);
         ^
mit_election.h:260:10: error: Buffer is accessed out of bounds: str [bufferAccessOutOfBounds]
   fgets(str,99,fp);
         ^
mit_election.h:639:14: error: Buffer is accessed out of bounds: str [bufferAccessOutOfBounds]
       fgets(str,99,fp);
             ^
mit_election.h:260:17: warning: Either the condition 'fp==NULL' is redundant or there is possible null pointer dereference: fp. [nullPointerRedundantCheck]
   fgets(str,99,fp);
                ^
mit_election.h:258:9: note: Assuming that condition 'fp==NULL' is not redundant
   if(fp==NULL)
        ^
mit_election.h:260:17: note: Null pointer dereference
   fgets(str,99,fp);
                ^
mit_election.h:125:8: style: The scope of the variable 'fp' can be reduced. [variableScope]
 FILE *fp;
       ^
mit_election.h:208:13: style: The scope of the variable 'k' can be reduced. [variableScope]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
            ^
mit_election.h:208:31: style: The scope of the variable 'flg' can be reduced. [variableScope]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
                              ^
mit_election.h:208:25: style: Local variable 'pos' shadows outer variable [shadowVariable]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
                        ^
mit_election.h:6:7: note: Shadowed declaration
char *pos;
      ^
mit_election.h:208:25: note: Shadow variable
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
                        ^
mit_election.h:208:7: style: Variable 'i' is assigned a value that is never used. [unreadVariable]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
      ^
mit_election.h:208:22: style: Variable 'j' is assigned a value that is never used. [unreadVariable]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
                     ^
mit_election.h:208:28: style: Variable 'pos' is assigned a value that is never used. [unreadVariable]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
                           ^
mit_election.h:208:34: style: Variable 'flg' is assigned a value that is never used. [unreadVariable]
 int i=0,no,k=0,r=0,j=0,pos=0,flg=1;
                                 ^
mit_election.h:278:8: style: Variable 'flg' is assigned a value that is never used. [unreadVariable]
    flg=2;
       ^
mit_election.h:303:12: style: Unused variable: fp [unusedVariable]
 FILE* f1,*fp,*fpb;
           ^
mit_election.h:304:33: style: Unused variable: text [unusedVariable]
 char user[15],pass[15],prn[15],text[20],nm[50],ch,sp;
                                ^
mit_election.h:304:42: style: Unused variable: nm [unusedVariable]
 char user[15],pass[15],prn[15],text[20],nm[50],ch,sp;
                                         ^
mit_election.h:307:11: style: Unused variable: yr [unusedVariable]
 int i,no,yr,n,j,max,opt,no1;
          ^
mit_election.h:307:14: style: Unused variable: n [unusedVariable]
 int i,no,yr,n,j,max,opt,no1;
             ^
mit_election.h:307:22: style: Unused variable: opt [unusedVariable]
 int i,no,yr,n,j,max,opt,no1;
                     ^
mit_election.h:307:26: style: Unused variable: no1 [unusedVariable]
 int i,no,yr,n,j,max,opt,no1;
                         ^
mit_election.h:568:12: style: Unused variable: f1 [unusedVariable]
 FILE *fp,*f1;
           ^
mit_election.h:571:24: style: Unused variable: d [unusedVariable]
 char prn[15],text[20],d;
                       ^
mit_election.h:575:16: style: Unused variable: opt [unusedVariable]
 int len,num,i,opt,j,res,k=0,nos,choice,roll,val;
               ^
mit_election.h:575:30: style: Unused variable: nos [unusedVariable]
 int len,num,i,opt,j,res,k=0,nos,choice,roll,val;
                             ^
mit_election.h:575:34: style: Unused variable: choice [unusedVariable]
 int len,num,i,opt,j,res,k=0,nos,choice,roll,val;
                                 ^
mit_election.h:575:41: style: Unused variable: roll [unusedVariable]
 int len,num,i,opt,j,res,k=0,nos,choice,roll,val;
                                        ^
mit_election.h:576:7: style: Unused variable: no [unusedVariable]
 char no,v1,v2;
      ^
